fixing embed styles, with high contrast lines

--- a/static/css/app.main.css
+++ b/static/css/app.main.css
@@ -424,7 +424,7 @@ html,body,.container-fullheight
 }
 
 .views-band .drag-ghost{
-  background: red;
+  
 }
 
 .views-band .drag-ghost .view-thumbnail{
